src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_7_errors.snap
---
source: src/parser/test.rs
description: "if (x) { x else { x }"
expression: "parser_errors(\"if (x) { x else { x }\", errors)"
---
if (x) { x else { x }
                    ^ SyntaxError: Unexpected eof.
